# Advent-of-Code

./: pyproject.toml
2025/day_1/: main.ipynb
2025/day_10/: main.ipynb
2025/day_11/: main.ipynb
2025/day_12/: input.txt  main.ipynb
2025/day_2/: main.ipynb
2025/day_3/: main.ipynb
2025/day_4/: main.ipynb
2025/day_5/: available.txt  db.txt  main.ipynb
2025/day_6/: main.ipynb
2025/day_7/: main.ipynb
2025/day_8/: main.ipynb
2025/day_9/: main.ipynb
